--- a/app/assets/styles/modules/_form.css
+++ b/app/assets/styles/modules/_form.css
@@ -14,6 +14,9 @@
     background-color: #fff;
     border-radius: 4px;
     resize: vertical;
+    &:focus-visible {
+      outline: 3px solid $bodyLiteBGFontColor;
+    }
   }
   &--ta {
     width: 100%;
@@ -21,15 +24,21 @@
     border: 1px solid #000;
     background-color: #fff;
     border-radius: 4px;
+    &:focus-visible {
+      outline: 3px solid $bodyLiteBGFontColor;
+    }
   }
   button {
     font-size: 1.5rem;
     cursor: pointer;
     padding: 5px 20px;
     border-radius: 4px;
-    border: 1px solid #000;
+    border: 1px solid $bodyLiteBGFontColor;
     &:hover {
       background-color: #dedfe3;
+    }
+    &:focus-visible {
+      outline: 3px solid $bodyLiteBGFontColor;
     }
   }
 
