--- a/app/assets/styles/modules/_nav.css
+++ b/app/assets/styles/modules/_nav.css
@@ -179,7 +179,7 @@
     border: 1px solid currentColor;
     border-radius: 0.5rem;
     font: 500 1.2rem/1.25 $menuFont;
-    background: $HeaderFooterDarkBackground;
+    background: rgba(0, 0, 0, 0.6); /*$HeaderFooterDarkBackground;*/
     color: #fff;
     cursor: pointer;
     transition: opacity 0.3s ease;
